# sdrive-cli

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.sh  downloaded.decrypted  sdrive.toml-example
src/: encryption.rs  file.rs  fingerprint.rs  keys.rs  lib.rs  main.rs  parse.rs  secret.rs
src/cli/: mod.rs
src/config/: mod.rs
src/credits/: mod.rs
src/ipfs/: mod.rs
src/p2p/: mod.rs
src/server/: directories.rs  download.rs  iroh.rs  listfiles.rs  mod.rs  watch_directory.rs
src/upload/: mod.rs  poll.rs
