[package]
name = "sdriveupload"
version = "1.0.3"
edition = "2021"

[[bin]]
name = "fingerprint"
path = "src/fingerprint.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.16", features = ["full"] }
reqwest = { version = "0.11.16", features = ["json", "multipart"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = {version = "1.3", features = ["v4"]}
dialoguer = "0.8"
mime_guess = "2.0.4"
toml = "0.7.3"
indicatif = "0.17.3"
dirs = "5.0.0"
sha2 = "0.10.6"
digest = "0.10.6"
async-recursion = "1.0.4"

