[package]
name = "sdrive"
version = "1.5.0"
edition = "2021"
description = "Command line tool for uploading and managing files on SDrive."
license = "MIT"

[dependencies]
tokio = { version = "1.16", features = ["full"] }
reqwest = { version = "0.11.16", features = ["json", "multipart"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = {version = "1.3", features = ["v4"]}
dialoguer = "0.8"
mime_guess = "2.0.4"
toml = "0.7.3"
indicatif = "0.17.3"
dirs = "5.0.0"
sha2 = "0.10.6"
digest = "0.10.6"
async-recursion = "1.0.4"
clap = { version = "3.2.8", features = ["derive", "cargo"] }
console = "0.15.0"
ctrlc = "3.2.2"
lazy_static = "1.4.0"
regex = "1.10.3"
anyhow = "1.0.81"
solana-client = "1.7.11"
solana-sdk = "1.7.11"
solana-program = "1.18.7"
aes-gcm = "0.10.3"
rand = "0.9.0"
base64 = "0.22.1"
keyring = { version = "3.6.2", features = ["apple-native"] }
url = "2.5.4"
hex = "0.4.3"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
actix-web = "4.10.2"
actix-governor = "0.8.0"
ignore = "0.4.23"
rusqlite = "0.34.0"

